package gameobject

import (
	"Gamedev_Tempura-of-p--Phenylazo-phenol/Source/Utils"
)

type Transform interface {
	Position() Utils.Position
}
